<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright © 2017 Dominic Heutelbeck (dheutelbeck@ftk.de) Licensed under 
	the Apache License, Version 2.0 (the "License"); you may not use this file 
	except in compliance with the License. You may obtain a copy of the License 
	at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable 
	law or agreed to in writing, software distributed under the License is distributed 
	on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either 
	express or implied. See the License for the specific language governing permissions 
	and limitations under the License. -->
<!-- Update all child project versions to the actual parent pom version: 
	mvn versions:update-child-modules -N -->
<!-- Check and - if necessary - correct the license headers of all source 
	files mvn com.mycila:license-maven-plugin:format -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.sapl</groupId>
	<artifactId>sapl-policy-engine</artifactId>
	<version>2.0.0-SNAPSHOT</version>

	<packaging>pom</packaging>

	<name>SAPL Policy Engine</name>

	<developers>
		<developer>
			<name>Dominic Heutelbeck</name>
			<email>dominic@heutelbeck.com</email>
			<roles>
				<role>Project Owner</role>
			</roles>
		</developer>
	</developers>

	<inceptionYear>2019</inceptionYear>

	<licenses>
		<license>
			<name>Apache 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
		</license>
	</licenses>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.8</java.version>
		<xtextVersion>2.18.0</xtextVersion>
		<version.license-maven-plugin>1.10</version.license-maven-plugin>
		<version.maven-javadoc-plugin>3.1.0</version.maven-javadoc-plugin>
		<version.maven-source-plugin>3.1.0</version.maven-source-plugin>
		<version.junit>4.12</version.junit>
		<version.lombok>1.18.8</version.lombok>
		<version.springboot>2.1.5.RELEASE</version.springboot>
		<version.powermock>2.0.2</version.powermock>
		<version.mockito>2.28.2</version.mockito>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
	</properties>

	<modules>
		<module>sapl-core</module>
		<module>sapl-ide</module>
		<module>sapl-web</module>
		<module>sapl-api</module>
		<module>sapl-interpreter</module>
		<module>sapl-pdp-embedded</module>
		<module>sapl-pdp-client</module>
		<module>sapl-pdp-server</module>
		<module>sapl-pip-http</module>
		<module>sapl-documentation</module>
		<module>sapl-geo</module>
		<module>sapl-spring</module>
		<module>sapl-spring-boot-autoconfigure</module>
		<module>sapl-spring-boot-starter</module>
		<module>sapl-webclient</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<!-- XText -->
			<dependency>
				<groupId>org.eclipse.xtext</groupId>
				<artifactId>xtext-dev-bom</artifactId>
				<version>${xtextVersion}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<!-- Testing Scope Dependencies -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${version.junit}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.powermock</groupId>
				<artifactId>powermock-module-junit4</artifactId>
				<version>${version.powermock}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.powermock</groupId>
				<artifactId>powermock-api-mockito2</artifactId>
				<version>${version.powermock}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${version.mockito}</version>
				<scope>test</scope>
			</dependency>
			<!-- Spring-Boot -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${version.springboot}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- Project Reactor -->
			<dependency>
				<groupId>io.projectreactor</groupId>
				<artifactId>reactor-bom</artifactId>
				<version>Californium-RELEASE</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- Project Lombok -->
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${version.lombok}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.xtend</groupId>
					<artifactId>xtend-maven-plugin</artifactId>
					<version>${xtextVersion}</version>
					<executions>
						<execution>
							<goals>
								<goal>compile</goal>
								<goal>xtend-install-debug-info</goal>
								<goal>testCompile</goal>
								<goal>xtend-test-install-debug-info</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<outputDirectory>${basedir}/src/main/xtend-gen</outputDirectory>
						<testOutputDirectory>${basedir}/src/test/xtend-gen</testOutputDirectory>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>2.5</version>
					<configuration>
						<filesets>
							<fileset>
								<directory>${basedir}/src/main/xtend-gen</directory>
								<includes>
									<include>**/*</include>
								</includes>
							</fileset>
							<fileset>
								<directory>${basedir}/src/test/xtend-gen</directory>
								<includes>
									<include>**/*</include>
								</includes>
							</fileset>
						</filesets>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.1</version>
					<configuration>
						<!-- workaround for https://issues.apache.org/jira/browse/SUREFIRE-1588 -->
						<useSystemClassLoader>false</useSystemClassLoader>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.maven.plugins
										</groupId>
										<artifactId>
											maven-resources-plugin
										</artifactId>
										<versionRange>
											[2.4.3,)
										</versionRange>
										<goals>
											<goal>resources</goal>
											<goal>testResources</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.codehaus.mojo
										</groupId>
										<artifactId>
											build-helper-maven-plugin
										</artifactId>
										<versionRange>
											[1.9.1,)
										</versionRange>
										<goals>
											<goal>add-resource</goal>
											<goal>add-source</goal>
											<goal>add-test-resource</goal>
											<goal>add-test-source</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<repositories>
		<repository>
			<id>codehaus-snapshots</id>
			<name>disable dead 'Codehaus Snapshots' repository, see https://bugs.eclipse.org/bugs/show_bug.cgi?id=481478</name>
			<url>http://nexus.codehaus.org/snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>codehaus-snapshots</id>
			<name>disable dead 'Codehaus Snapshots' repository, see https://bugs.eclipse.org/bugs/show_bug.cgi?id=481478</name>
			<url>http://nexus.codehaus.org/snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<profiles>
		<profile>
			<id>macos</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
				<platformSystemProperties>-XstartOnFirstThread</platformSystemProperties>
			</properties>
		</profile>
		<profile>
			<id>jdk9-or-newer</id>
			<activation>
				<jdk>[9,)</jdk>
			</activation>
			<properties>
				<moduleProperties>--add-modules=ALL-SYSTEM</moduleProperties>
			</properties>
		</profile>
	</profiles>

	<distributionManagement>
		<repository>
			<id>openconjurer</id>
			<name>OpenConjurer Nexus Maven Release Repository</name>
			<url>http://nexus.openconjurer.org/content/repositories/releases</url>
		</repository>
		<snapshotRepository>
			<id>openconjurer</id>
			<name>OpenConjurer Nexus Maven Snapshot Repository</name>
			<url>http://nexus.openconjurer.org/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

</project>
